Add PKCE mode to demo auth code lab