@@ -1,105 +1,90 @@
 package com.example.authorizationcode.client.web;
 
+import com.example.authorizationcode.client.config.AuthCodeDemoProperties;
 import org.apache.commons.lang3.RandomStringUtils;
-import org.springframework.beans.factory.annotation.Value;
-import org.springframework.http.ResponseEntity;
 import org.springframework.stereotype.Controller;
 import org.springframework.ui.Model;
 import org.springframework.web.bind.annotation.GetMapping;
-import org.springframework.web.bind.annotation.ResponseBody;
-import org.springframework.web.reactive.function.client.WebClient;
-import reactor.core.publisher.Mono;
 
 import java.io.UnsupportedEncodingException;
-import java.net.URI;
-import java.net.URL;
 import java.net.URLEncoder;
-import java.util.ArrayList;
-import java.util.List;
+
+import static java.nio.charset.StandardCharsets.UTF_8;
 
 /** Controller for performing OAuth2 authorization request. */
 @Controller
 public class AuthorizationRequestController {
 
-  @Value("${democlient.authorization.endpoint}")
-  private URL authorizationEndpointUrl;
+  private final AuthCodeDemoProperties authCodeDemoProperties;
+  private final ProofKeyForCodeExchange proofKeyForCodeExchange;
 
-  @Value("${democlient.authorization.clientid}")
-  private String clientid;
-
-  @Value("${democlient.authorization.response-type}")
-  private String responseType;
-
-  @Value("${democlient.authorization.redirect-uri}")
-  private URI redirectUri;
-
-  @Value("${democlient.authorization.scope}")
-  private List<String> scope = new ArrayList<>();
-
-  private final WebClient webClient;
-
-  private String authorizationRequest;
-
-  public AuthorizationRequestController(WebClient webClient) {
-    this.webClient = webClient;
+  public AuthorizationRequestController(
+          AuthCodeDemoProperties authCodeDemoProperties,
+          ProofKeyForCodeExchange proofKeyForCodeExchange) {
+    this.authCodeDemoProperties = authCodeDemoProperties;
+    this.proofKeyForCodeExchange = proofKeyForCodeExchange;
   }
 
   @GetMapping("/")
   public String initiateAuthRequest(Model model) throws UnsupportedEncodingException {
 
-    model.addAttribute("authorization_endpoint", authorizationEndpointUrl.toString());
-    model.addAttribute("client_id", clientid);
-    model.addAttribute("response_type", responseType);
-    model.addAttribute("redirect_uri", redirectUri.toString());
-    model.addAttribute("scope", String.join(" ", scope));
+    model.addAttribute("pkce", authCodeDemoProperties.isPkce() ? "On" : "Off");
+    model.addAttribute("authorization_endpoint", authCodeDemoProperties.getAuthorization().getEndpoint().toString());
+    model.addAttribute("client_id", authCodeDemoProperties.getClientId());
+    model.addAttribute("response_type", authCodeDemoProperties.getAuthorization().getResponseType());
+    model.addAttribute("redirect_uri", authCodeDemoProperties.getRedirectUri().toString());
+    model.addAttribute("scope", String.join(" ", authCodeDemoProperties.getAuthorization().getScope()));
+    model.addAttribute("prompt", authCodeDemoProperties.getAuthorization().getPrompt() != null ?
+            authCodeDemoProperties.getAuthorization().getPrompt() : "");
 
     String randomState = generateRandomState();
     model.addAttribute("state", randomState);
 
-    createAuthorizationRequest(randomState);
+    String authorizationRequest;
+
+    if (authCodeDemoProperties.isPkce()) {
+      String codeVerifier = proofKeyForCodeExchange.createAndGetCodeVerifier();
+      String codeChallenge = proofKeyForCodeExchange.createAndGetCodeChallenge(codeVerifier, ProofKeyForCodeExchange.CHALLENGE_METHOD_S_256);
+      authorizationRequest = createAuthorizationRequest(randomState, codeChallenge, ProofKeyForCodeExchange.CHALLENGE_METHOD_S_256);
+      model.addAttribute("code_verifier", codeVerifier);
+      model.addAttribute("code_challenge", codeChallenge);
+      model.addAttribute("code_challenge_method", ProofKeyForCodeExchange.CHALLENGE_METHOD_S_256);
+    } else {
+      authorizationRequest = createAuthorizationRequest(randomState);
+      model.addAttribute("code_verifier", "n/a");
+      model.addAttribute("code_challenge", "n/a");
+      model.addAttribute("code_challenge_method", "n/a");
+    }
+
     model.addAttribute("authorizationrequest", authorizationRequest);
 
     return "init-auth-request";
   }
 
-  @GetMapping("/authrequest")
-  @ResponseBody
-  public ResponseEntity<String> performAuthRequest() {
-    ResponseEntity<String> responseEntity = webClient
-            .get()
-            .uri(uriBuilder -> uriBuilder
-                    .scheme("http")
-                    .host("localhost")
-                    .port(8080)
-                    .path("/auth/realms/workshop/protocol/openid-connect/auth")
-                    .queryParam("client_id", clientid)
-                    .queryParam("response_type", responseType)
-                    .queryParam("redirect_uri", redirectUri.toString())
-                    .queryParam("scope", String.join(" ", scope))
-                    .build())
-            .exchange()
-            .map(cr -> ResponseEntity.status(cr.statusCode()).body(cr.statusCode().getReasonPhrase())).block();
-    int status = responseEntity.getStatusCodeValue();
-    String test = responseEntity.getHeaders().getLocation().toString();
-    return responseEntity;
+  private String generateRandomState() {
+    return URLEncoder.encode(RandomStringUtils.randomAlphanumeric(16), UTF_8);
   }
 
-  private String generateRandomState() throws UnsupportedEncodingException {
-    return URLEncoder.encode(RandomStringUtils.randomAlphanumeric(16), "UTF-8");
+  private String createAuthorizationRequest(String randomState) {
+    return createAuthorizationRequest(randomState, null, null);
   }
 
-  private void createAuthorizationRequest(String randomState) throws UnsupportedEncodingException {
-    authorizationRequest =
-        authorizationEndpointUrl.toString()
+  private String createAuthorizationRequest(String randomState, String codeChallenge, String challengeMethod) {
+    return
+        authCodeDemoProperties.getAuthorization().getEndpoint().toString()
             + "?response_type="
-            + responseType
+            + authCodeDemoProperties.getAuthorization().getResponseType()
             + "&client_id="
-            + URLEncoder.encode(clientid, "UTF-8")
+            + URLEncoder.encode(authCodeDemoProperties.getClientId(), UTF_8)
             + "&state="
             + randomState
+            + (codeChallenge != null ? "&code_challenge=" + codeChallenge : "")
+            + (challengeMethod != null ? "&code_challenge_method=" + challengeMethod : "")
             + "&scope="
-            + URLEncoder.encode(String.join(" ", scope), "UTF-8")
+            + URLEncoder.encode(String.join(" ", authCodeDemoProperties.getAuthorization().getScope()), UTF_8)
             + "&redirect_uri="
-            + URLEncoder.encode(redirectUri.toString(), "UTF-8");
+            + URLEncoder.encode(authCodeDemoProperties.getRedirectUri().toString(), UTF_8)
+            + (authCodeDemoProperties.getAuthorization().getPrompt() != null ? "&prompt="
+                + authCodeDemoProperties.getAuthorization().getPrompt() : "");
   }
 }
